--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/UserPasswordRecoveryAppEvent.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/UserPasswordRecoveryAppEvent.cshtml
@@ -1,21 +1,9 @@
 ﻿@using HelpDesk.ConsumerEventService.DTO
 @model UserPasswordRecoveryAppEventSubscribeDTO
 
-<!DOCTYPE html>
+@{
+    Layout = "~/EmailTemplates/_Layout.cshtml";
+}
+<p>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    
-</head>
-<body>
-    <p>
-        
-    </p>
-    <p>
-        
-    </p>
-
-    
-</body>
-</html>
+</p>
