--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestAppEventCabinet.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestAppEventCabinet.cshtml
@@ -1,18 +1,6 @@
 ﻿@using HelpDesk.ConsumerEventService.DTO
-@model UserRequestAppEventSubscribeDTO
+@{
+    Layout = "~/EmailTemplates/_Layout.cshtml";
+}
 
-<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-</head>
-<body>
-    <h>RequestId = @Model.RequestId</h>
-    <p>
-        
-    </p>
-
-    
-</body>
-</html>
+<h>RequestId = @Model.RequestId</h>
