--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestAppEventWorker.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestAppEventWorker.cshtml
@@ -1,18 +1,8 @@
 ﻿@using HelpDesk.ConsumerEventService.DTO
 @model UserRequestAppEventSubscribeDTO
 
-<!DOCTYPE html>
+@{
+    Layout = "~/EmailTemplates/_Layout.cshtml";
+}
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-</head>
-<body>
-    <h>RequestId = @Model.RequestId</h>
-    <p>
-        
-    </p>
-
-    
-</body>
-</html>
+<h>RequestId = @Model.RequestId</h>
