Шаблоны писем с Layout, исправление багов в личном кабинете

--- a/Presentation/HelpDesk.CabinetWebApp/Views/Account/Register.cshtml
+++ b/Presentation/HelpDesk.CabinetWebApp/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@using HelpDesk.CabinetWebApp.Models
 @using HelpDesk.CabinetWebApp.Resources
-@using HelpDesk.CabinetWebApp.Helpers
+@using HelpDesk.Web.Common.Helpers
 
 @model RegisterViewModel
 @{
