--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestAppEventCabinet.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestAppEventCabinet.cshtml
@@ -1,6 +1,6 @@
 ﻿@using HelpDesk.ConsumerEventService.DTO
 @{
-    Layout = "~/EmailTemplates/_Layout.cshtml";
+    Layout = "_Layout.cshtml";
 }
 
 <h>RequestId = @Model.RequestId</h>
