--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestAppEventWorker.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestAppEventWorker.cshtml
@@ -2,7 +2,7 @@
 @model UserRequestAppEventSubscribeDTO
 
 @{
-    Layout = "~/EmailTemplates/_Layout.cshtml";
+    Layout = "_Layout.cshtml";
 }
 
 <h>RequestId = @Model.RequestId</h>
