--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestDeedlineAppEvent.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/RequestDeedlineAppEvent.cshtml
@@ -3,7 +3,7 @@
 @model UserDeedlineAppEventSubscribeDTO
 
 @{
-    Layout = "~/EmailTemplates/_Layout.cshtml";
+    Layout = "_Layout.cshtml";
 }
 
 <h>@Resource.Subject_RequestDeedlineAppEventConsumer</h>
