--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/UserPasswordRecoveryAppEvent.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/UserPasswordRecoveryAppEvent.cshtml
@@ -2,8 +2,8 @@
 @model UserPasswordRecoveryAppEventSubscribeDTO
 
 @{
-    Layout = "~/EmailTemplates/_Layout.cshtml";
+    Layout = "_Layout.cshtml";
 }
 <p>
-
+    Ваш пароль @Model.Password
 </p>
