--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/_Layout.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/_Layout.cshtml
@@ -1,4 +1,7 @@
 ﻿@using HelpDesk.ConsumerEventService.Resources
+@using HelpDesk.ConsumerEventService.DTO
+
+@model UserEventSubscribeDTO
 <style>
     .mail-body {
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -22,7 +25,7 @@
 </style>
 <table class="mail-body">
     <tr>
-        <td class="mail-header"><span class="navbar-brand"><a style="text-decoration:none; color: #333" href="#">@Resource.AppName</a></span></td>
+        <td class="mail-header"><span class="navbar-brand"><a style="text-decoration:none; color: #333" href="@Model.BaseUrl">@Resource.AppName</a></span></td>
     </tr>
     <tr>
         <td>
