--- a/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/UserRegisterAppEvent.cshtml
+++ b/Services/HelpDesk.ConsumerEventSrvice/EmailTemplates/UserRegisterAppEvent.cshtml
@@ -7,5 +7,6 @@
 }
 
 <p>
-    Вы зарегистрированы в системе <b>@Resource.AppName</b>. Ваш логин @Model.Email
+    Вы зарегистрированы в системе <b>@Resource.AppName</b>. Для возможности подачи заявок заполните информацию на вкладках 
+    <b>Мои данные</b> и <b>Мои объекты</b>
 </p>
