--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/views/requestHistory/list.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/views/requestHistory/list.cshtml
@@ -10,11 +10,11 @@
         <button type="button" ng-click="vm.closeAlert()" class="close" data-hide="alert">&times;</button>
         {{vm.errors.ErrorGeneralMessage.Errors[0].ErrorMessage}}
     </div>
-    <div class="row" style="min-height:30px; height:30px">
+    <div class="row" style="min-height:30px; height:30px;">
         <div class="col-md-3"></div>
         <div class="col-md-9">
-            <span ng-repeat="item in vm.requestStateCounts" style="padding: 3px; cursor: pointer; border: 1px solid {{item.StatusBackColor}}">
-                <a>
+            <span ng-repeat="item in vm.requestStateCounts" style="background-color: {{ {true: 'yellow', false: ''}[vm.getFilterStateChecked(item.StatusId) == true] }}; margin-left:2px; margin-right:2px; padding: 3px; cursor: pointer; border: 1px solid {{item.StatusBackColor}}">
+                <a ng-click="vm.setFilterState(item.StatusId)">
                     {{item.StatusName}} -
                     <span>{{item.Count}}</span>
                 </a>
